@@ -108,7 +108,7 @@ public class MainController {
         List<Comunidad> comunidades = persona.getMembresias()
                 .stream()
                 .map(Miembro::getComunidad)
-                .collect(Collectors.toList());
+                .toList();
 
         Incidente nuevoIncidente = new Incidente();
         nuevoIncidente.setEstablecimiento(establecimiento);
@@ -130,8 +130,6 @@ public class MainController {
             nuevoIncidente.getComunidadesAfectadas().add(comunidad);
             comunidadRepository.save(comunidad);
 
-            incidenteRepository.save(nuevoIncidente);
-
         }
 
         return "redirect:/reportar_incidente";
@@ -140,32 +138,6 @@ public class MainController {
     @GetMapping("/buscar_incidente")
     public String buscar_incidente() {
         return "buscar_incidente";
-    }
-
-    @GetMapping("/comunidades/{idPersona}")
-    public ModelAndView obtenerVistaComunidadesPersona(@PathVariable() Long idPersona) {
-
-        Persona persona = personaRepository.findByIdPersona(idPersona);
-
-        List<Miembro> membresiasPersona = new ArrayList<>();
-
-        membresiasPersona = persona.getMembresias();
-
-        AbandonarComunidadRequest abandonarComunidadRequest = new AbandonarComunidadRequest();
-        CambiarTipoRequest cambiarTipoRequest = new CambiarTipoRequest();
-
-        List<Comunidad> comunidades = comunidadRepository.findAll();
-
-        UnirseAComunidadRequest unirseAComunidadRequest = new UnirseAComunidadRequest();
-
-        ModelAndView modelAndView = new ModelAndView("mis_comunidades");
-        modelAndView.addObject("personaEnCuestion", persona);
-        modelAndView.addObject("unirseAComunidadRequest", unirseAComunidadRequest);
-        modelAndView.addObject("comunidades",comunidades);
-        modelAndView.addObject("membresias", membresiasPersona);
-        modelAndView.addObject("abandonarComunidadRequest", abandonarComunidadRequest);
-        modelAndView.addObject("cambiarTipoRequest", cambiarTipoRequest);
-        return modelAndView;
     }
 
     @GetMapping("/buscar_incidente/{idIncidente}")
@@ -184,9 +156,6 @@ public class MainController {
         return modelAndView;
     }
 
-
-
-
     @PostMapping("/cerrar_incidente")
     public String createIncidente(@ModelAttribute CerrarIncidenteRequest cerrarIncidenteRequest) {
         // Handle the data received from the frontend
@@ -203,30 +172,6 @@ public class MainController {
         // Return a response, e.g., a success message
         return "redirect:/buscar_incidente/" + incidente.getIdIncidente();
     }
-
-    @PostMapping("/unirse_a_comunidad")
-    public String unirseAComunidad(@ModelAttribute UnirseAComunidadRequest unirseAComunidadRequest) {
-        // Handle the data received from the frontend
-
-        System.out.println("La persona que se quiere unir es: " + unirseAComunidadRequest.getIdPersona());
-        Persona persona = personaRepository.findByIdPersona(unirseAComunidadRequest.getIdPersona());
-        Comunidad comunidad = comunidadRepository.getReferenceById(unirseAComunidadRequest.getIdComunidad());
-
-        //todo poner dentro de un gestor de comunidades + usar algún patron
-        Miembro miembro = new Miembro();
-        miembro.setComunidad(comunidad);
-        miembro.setPersona(persona);
-        miembro.setTipoUsuario(TipoUsuario.AFECTADO);
-        miembro.setRolEnComunidad(Rol.COMUN);
-        miembro.setNombre(comunidad.getDescripcionComunidad());
-
-        miembroRepository.save(miembro);
-
-
-        // Return a response, e.g., a success message
-        return "redirect:/comunidades/" + persona.getIdPersona().toString();
-    }
-
 
     @GetMapping("/editar_perfil/{idPersona}")
     public ModelAndView editar_perfil(@PathVariable() Long idPersona) {
@@ -258,6 +203,59 @@ public class MainController {
         return modelAndView;
     }
 
+    @GetMapping("/comunidades/{idPersona}")
+    public ModelAndView obtenerVistaComunidadesPersona(@PathVariable() Long idPersona) {
+
+        Persona persona = personaRepository.findByIdPersona(idPersona);
+
+        List<Miembro> membresiasPersona = new ArrayList<>();
+
+        membresiasPersona = persona.getMembresias();
+
+        for(Miembro membresia : membresiasPersona){
+            System.out.println(membresia.getIdMiembro());
+        }
+
+        AbandonarComunidadRequest abandonarComunidadRequest = new AbandonarComunidadRequest();
+        CambiarTipoRequest cambiarTipoRequest = new CambiarTipoRequest();
+
+        List<Comunidad> comunidades = comunidadRepository.findAll();
+
+        UnirseAComunidadRequest unirseAComunidadRequest = new UnirseAComunidadRequest();
+
+        ModelAndView modelAndView = new ModelAndView("mis_comunidades");
+        modelAndView.addObject("personaEnCuestion", persona);
+        modelAndView.addObject("unirseAComunidadRequest", unirseAComunidadRequest);
+        modelAndView.addObject("comunidades",comunidades);
+        modelAndView.addObject("membresias", membresiasPersona);
+        modelAndView.addObject("abandonarComunidadRequest", abandonarComunidadRequest);
+        modelAndView.addObject("cambiarTipoRequest", cambiarTipoRequest);
+        return modelAndView;
+    }
+
+    @PostMapping("/unirse_a_comunidad")
+    public String unirseAComunidad(@ModelAttribute UnirseAComunidadRequest unirseAComunidadRequest) {
+        // Handle the data received from the frontend
+
+        System.out.println("La persona que se quiere unir es: " + unirseAComunidadRequest.getIdPersona());
+        Persona persona = personaRepository.findByIdPersona(unirseAComunidadRequest.getIdPersona());
+        Comunidad comunidad = comunidadRepository.getReferenceById(unirseAComunidadRequest.getIdComunidad());
+
+        //todo poner dentro de un gestor de comunidades + usar algún patron
+        Miembro miembro = new Miembro();
+        miembro.setComunidad(comunidad);
+        miembro.setPersona(persona);
+        miembro.setTipoUsuario(TipoUsuario.AFECTADO);
+        miembro.setRolEnComunidad(Rol.COMUN);
+        miembro.setNombre(comunidad.getDescripcionComunidad());
+
+        miembroRepository.save(miembro);
+
+
+        // Return a response, e.g., a success message
+        return "redirect:/comunidades/" + persona.getIdPersona().toString();
+    }
+
 
     @PostMapping("/abandonar_comunidad")
     public String abandonarComunidad(@ModelAttribute AbandonarComunidadRequest abandonarComunidadRequest) {
@@ -267,7 +265,7 @@ public class MainController {
 
         miembroRepository.delete(miembro);
 
-        return "redirect:/editar_perfil/" + miembro.getPersona().getIdPersona();
+        return "redirect:/comunidades/" + miembro.getPersona().getIdPersona();
     }
 
     @PostMapping("/cambiar_tipo")
@@ -289,7 +287,7 @@ public class MainController {
         System.out.println(cambiarTipoRequest.getIdMiembro());
         System.out.println(cambiarTipoRequest.getTipo());
 
-        return "redirect:/editar_perfil/" + miembro.getPersona().getIdPersona();
+        return "redirect:/comunidades/" + miembro.getPersona().getIdPersona();
     }
 
     @PostMapping("/cambiar_nombre")
@@ -435,8 +433,6 @@ public class MainController {
 
         return modelAndView;
     }
-
-
 
 
     @GetMapping("/rankings/{fecha}")
